# aedwards-quoting

./: .axon-discover.yaml  .gitignore  README.md  alembic.ini  allenedwards-cli.spec  pyproject.toml
deploy/: aedwards-monitor.service  aedwards-web.service  deploy.sh  deploy_web.sh  provision.sh  provision_do.sh
docs/: chip-feedback-resolution.md  extraction-improvements.md  prd-crm-rag-system.md  prd-pipeline-repair-mobile-app.md  proposal-crm-phase1.html  scope-crm-rag.md
docs/research/: admin-ui-options.md  autosave-blur.md  chip-alignment-gap-analysis.md  chip-email1-quote-tool-draft-2026-07-19.html  chip-email2-proposal-draft-2026-07-20.md  drive-survey.md  (+5 more)
examples/: Mail_Attachment-12.eml  Mail_Attachment-13.eml  Mail_Attachment-9.eml  Mail_Attachment.eml  Mail_Attachment2.eml  Requests_for_Quotes.eml
migrations/: env.py
scripts/: build_macos.sh  seed_product_catalog.py
tests/: __init__.py  conftest.py  test_auth_system.py  test_classifier_regression.py  test_cli_provider_selection.py  test_customers.py  test_db_writer.py  test_email_providers.py  test_end_to_end.py  test_flask_scaffold.py  test_monitor_attachments.py  test_parser.py  test_pdf_generator.py  test_pdf_preview_send.py  test_pricing.py  test_quote_dashboard.py  test_quote_delete.py  test_quote_detail.py  test_quote_duplicate.py  test_quote_editor.py  test_quote_revisions.py  test_send_as_user.py  test_validate.py
tools/: README-ground-truth.md  batch_validate.py  match_attachments.py  parse_ground_truth.py  send_test_rfqs.py  split_pst_dump.py  spot_check_ground_truth.py  validate.py
(+82 files in other folders)
