[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allenedwards"
version = "0.1.0"
description = "Allan Edwards RFQ-to-Quote CLI Tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "anthropic>=0.21",
    "msal>=1.30",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "reportlab>=4.0",
    "flask>=3.0",
    "flask-login>=0.6",
    "flask-sqlalchemy>=3.1",
    "alembic>=1.13",
    "openpyxl>=3.1",
    "gunicorn>=22.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "pyinstaller>=6.0",
]

[project.scripts]
allenedwards = "allenedwards.cli:main"
allenedwards-web = "app.wsgi:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
allenedwards = ["assets/*.jpg", "data/*.csv"]
app = ["templates/*.html", "templates/*/*.html", "templates/*/*/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by formatter, not checker

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
